# open-atlas

./: .env.example  .gitignore  .gitignore.template  .opencode.md  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Makefile  OPENATLAS_SPEC.md  README.md  dev.sh
.github/: SECRETS_SETUP.template.md  path-filters.yml
.github/environments/: README.md
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml  mobile-android.yml  mobile-ios.yml  nightly.yml  qa.yml  release.yml  reusable-rust.yml  reusable-stdb.yml  reusable-web.yml  security-audit.yml
.opencode/agents/: architect.md  debugger.md  reviewer.md
crates/openatlas-cli/: Cargo.toml
crates/openatlas-cli/src/: commands.rs  http.rs  main.rs
crates/openatlas-core/: Cargo.toml
crates/openatlas-core/src/: domain.rs  error.rs  event.rs  graph.rs  inference.rs  lib.rs
crates/openatlas-ingest/: Cargo.toml
crates/openatlas-ingest/src/: auth.rs  circuit.rs  feed_config.rs  feed_poll.rs  fixtures.rs  health.rs  ingest_mode.rs  lib.rs  local_env.rs  logging.rs  main.rs  metrics.rs  payload_compact.rs  pipeline.rs  rate_limit.rs  simulator.rs  state.rs  stdb.rs  validate.rs
crates/openatlas-ingest/src/feeds/: adapter.rs  coingecko.rs  eia.rs  fred.rs  gdelt.rs  http.rs  mod.rs  nasa_eonet.rs  normalize.rs  open_meteo.rs  opensky.rs  opensky_auth.rs  usgs.rs  world_bank.rs
crates/openatlas-ingest/src/routes/: feeds.rs  health.rs  llm_proxy.rs  mod.rs
crates/openatlas-ingest/tests/: admin_auth.rs  feed_config_api.rs  feed_pipeline.rs  http_api_surface.rs  stdb_integration.rs
crates/openatlas-ingest/tests/common/: mod.rs
crates/openatlas-ingest/tests/fixtures/: eia_demand.json  fred_observations.json  usgs_hour.json  world_bank_gdp.json
crates/openatlas-llm-bridge/: Cargo.toml
crates/openatlas-llm-bridge/src/: main.rs  ollama.rs
crates/openatlas-stdb-module/: Cargo.toml
crates/openatlas-stdb-module/src/: lib.rs  narrative.rs
crates/openatlas-stdb-module/tests/: replay_harness.rs
crates/openatlas-stdb-module/tests/fixtures/: replay_minimal.json
crates/openatlas-ui-wasm/: Cargo.toml
crates/openatlas-ui-wasm/src/: layout.rs  lib.rs  model.rs  state.rs  status.rs  stream.rs
crates/openatlas-ui-wasm/src/render/: anomaly.rs  causal.rs  domain.rs  events.rs  insight.rs  kpi.rs  map.rs  mod.rs  panel.rs
data/: causal_edges.jsonl  events.jsonl
docs/: BACKEND_INGEST.md  CICD.md  CLOUD_PLATFORM.md  CONFIG.md  DATA_PLANE.md  DEPLOY.md  GITHUB_SECRETS.md  MOBILE.md  MOBILE_UX_PLAN.md  PRODUCT_ROADMAP.md  RATE_LIMITS.md  README.md  REVIEW_REPORT.md  TESTING.md  feed-poll.example.json  feed-secrets.example.json  local.env.example
docs/roadmap/: FEATURE_IDEAS.md  MOBILE_NATIVE_PLAN.md  PHASE_A_TRUST.md  PHASE_B_UX.md  PHASE_C_SHIP.md  PHASE_D_DEPTH.md  PHASE_UI_OVERHAUL.md  README.md
media/: README.md
openatlas/: Cargo.toml  README.md
openatlas/crates/openatlas-ai/: Cargo.toml
openatlas/crates/openatlas-analytics/: Cargo.toml
openatlas/crates/openatlas-analytics/src/: lib.rs
openatlas/crates/openatlas-core/: Cargo.toml
openatlas/crates/openatlas-core/src/: lib.rs
openatlas/crates/openatlas-ingest/: Cargo.toml
openatlas/crates/openatlas-ingest/src/: lib.rs
openatlas/crates/openatlas-reducers/: Cargo.toml
openatlas/crates/openatlas-reducers/src/: lib.rs
openatlas/crates/openatlas-viz/: Cargo.toml
openatlas/docs/: runbook-phase1.md
openatlas/docs/adr/: 0001-spacetimedb-source-of-truth.md
openatlas/services/ingest-worker/: Cargo.toml
openatlas/services/ingest-worker/src/: main.rs
openatlas/services/spacetime-client/: Cargo.toml
openatlas/services/spacetime-client/src/: lib.rs
reports/: README.md
reports/scripts/: md-to-pdf.sh
reports/templates/: architecture-decision.md  change-impact.md  code-quality.md  post-mortem.md  project-analysis.md  technical-spec.md
rules/: architecture.md  conventions.md  testing.md  workflows.md
scripts/: check-no-secrets-in-git.sh  diagnose-stack.sh  e2e-qa.sh  generate-android-icons.sh  init-local-config.sh  load-local-env.sh  mobile-android-emulator.sh  mobile-android-toolchain.sh  mobile-build-apk.sh  mobile-build-ios.sh  mobile-env.sh  mobile-env.test.sh  ollama-serve-cpu.sh  post-deploy-smoke.sh  prove-live-stack.sh  prove-llm-stack.sh  publish-stdb-cloud.sh  replay-fixture.sh  sync-brand-assets.sh  test-all.sh  verify-runtime.sh  verify-stack.sh  verify-stdb-subscriptions.sh
scripts/ci/: generate-release-notes.sh  install-android-build-prereqs.sh  install-ios-codesign.sh  install-spacetimedb-cli.sh  ios-ExportOptions.plist.template  merge-gate.sh  release-bump.sh  set-native-app-version.sh  should-run.sh  sync-version-to-projects.sh  version-lib.sh  write-feed-secrets-from-env.sh
skills/: bun.md  capacitor.md  cassandra.md  cpp.md  csharp.md  docker.md  github-actions.md  golang.md  java.md  javascript.md  json.md  kubernetes.md  mariadb.md  mongodb.md  node.md  odin.md  oracle.md  postgres.md  protobuf.md  python.md  react-native.md  react.md  reporting.md  ruby.md  rust.md  spacetime-db.md  sql.md  sqlite.md  svelte.md  tailwind.md  terraform.md  typescript.md  vite.md  yaml.md
web/: .env.example  .gitignore  capacitor.config.ts  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/android/app/: build.gradle
web/e2e/: accessibility.spec.ts  data-flow.spec.ts  demo-goto.ts  desktop-layout.spec.ts  health-dashboard.spec.ts  hub-view.spec.ts  map-demo.spec.ts  map-view.spec.ts  matrix-view.spec.ts  mobile-layout.spec.ts  nav-rail.spec.ts  navigation.spec.ts  settings.spec.ts  smoke.spec.ts  tablet-layout.spec.ts
web/public/: manifest.json
web/public/tracking/: active-leo-sample.tle  geo-trim.tle  maritime-samples.json
web/src/: App.svelte  app.css  app.css.bak  main.ts  vite-env.d.ts
web/src/lib/: briefing-fallback.ts  buffer-trim.test.ts  buffer-trim.ts  chart-cache-memo.test.ts  chart-cache-memo.ts  chart-cache.ts  colors.ts  connection-errors.test.ts  connection-errors.ts  connection.svelte.ts  connection.test.ts  dashboard-flush.e2e.test.ts  dashboard-flush.test.ts  (+93 more)
(+214 files in other folders)
