[package]
name = "openatlas-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
# No ` ```rust ` doc tests; workspace `cargo test` doctest harness fails to link deps.
doctest = false

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
