[package]
name = "openatlas-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenAtlas ingest pusher — polls feeds + simulators and writes events to SpacetimeDB via the ingest_event reducer."

[lib]
name = "openatlas_ingest"
path = "src/lib.rs"

[[bin]]
name = "openatlas-ingest"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
openatlas-core = { path = "../openatlas-core" }
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
