[package]
name = "openatlas-llm-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local HTTP bridge from OpenAtlas UI to a self-hosted Ollama (OpenAI-compatible) server for natural-language analysis."

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "openatlas-llm-bridge"
path = "src/main.rs"
