[package]
name = "ingest-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
openatlas-core = { path = "../../crates/openatlas-core" }
openatlas-ingest = { path = "../../crates/openatlas-ingest" }
spacetime-client = { path = "../spacetime-client" }
