[package]
name = "spacetime-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
openatlas-core = { path = "../../crates/openatlas-core" }
openatlas-reducers = { path = "../../crates/openatlas-reducers" }
uuid.workspace = true
